# adk_tv_control

./: .gitignore  LICENSE  README.md  docker-compose.yml
.cursor/: rules.json
.devcontainer/: docker-compose.yml
.devcontainer/bravia_mcp/: devcontainer.json
.devcontainer/tv_control_agent/: devcontainer.json
bravia_mcp/: .env.example  Dockerfile  README.md  entrypoint.sh  index.ts  package-lock.json  package.json  tsconfig.json
bravia_mcp/tests/: mcp-server.mock.test.js  mcp-server.test.js  sse-endpoint.test.js  streamable-http-endpoint.test.js  tv-api.test.js
tv_control_agent/: Dockerfile  README.md  entrypoint.sh  pyproject.toml
tv_control_agent/tv_control_agent/: .env.example  agent.py
